# ADLINK

./: README.md  predict.py  v4l2  v4l2_test
VideoStream/: CMakeLists.txt
VideoStream/config/: VideoStreamReceiverProperties.json
VideoStream/definitions/TagGroup/com.adlinktech.example/: VideoStreamTagGroup.json
VideoStream/definitions/ThingClass/com.adlinktech.aati/: VideoStreamReceiverThingClass.json
VideoStream/definitions/ThingClass/com.adlinktech.example/: VideoStreamSenderThingClass.json
VideoStream/src/: VideoStreamReceiver.cpp  VideoStreamSender.cpp  ocv_common.hpp
cpp/VideoStream/: CMakeLists.txt
cpp/VideoStream/src/: VideoStreamReceiver.cpp
python/VideoStream/: handwritten.mapping  handwritten.xml  video_stream_receiver.py  video_stream_sender.py
